add new docs swagger
